2014-06-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infokey.c (compile): Set Info variables as was done in
	section_to_vars.
	* info/infomap.c (section_to_vars): Removed.
	(user_vars, user_vars_len): Removed.
	(read_init_file): Don't call section_to_vars.
	(fetch_user_maps): Don't set user_vars.
	(filesize, getint): Remove unused.

	* info/infokey.c (error_message): Merged into calling code.

	* NEWS, doc/info-stnd.texi, util/dir-example: Document infokey change.

2014-06-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infokey.c (lookup_action): Use function_doc_array instead of
	function_key_array.
	* info/makeinfo.c (process_one_file): Argument removed.
	(main, process_one_file): Don't create key.c.
	(key_filename, key_header, key_header_1): Remove unused.
	* info/key.h: File deleted.

2014-06-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infokey.c (program_name, print_version_p, print_help_p)
	(input_filename, output_filename, long_options, mkpath)
	(write_infokey_file, suggest_help, short_help, main): Remove unused.

	* info/infomap.c (fetch_user_maps): Remove disabled code loading
	compiled .info file.

	* info/infokey.h (INFOKEY_SRCFILE)
	(INFOKEY_NMAGIC, INFOKEY_MAGIC_SO, INFOKEY_MAGIC_S1)
	(INFOKEY_MAGIC_S2, INFOKEY_MAGIC_S3, INFOKEY_SECTION_INFO)
	(INFOKEY_SECTION_EA, INFOKEY_SECTION_VAR, INFOKEY_MAGIC_EO)
	(INFOKEY_MAGIC_E1, INFOKEY_MAGIC_E2, INFOKEY_MAGIC_E3)
	(INFOKEY_MAX_DEFLEN): Remove unused.

2014-06-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/Makefile.am (bin_PROGRAMS): infokey removed
	(infokey_LDADD, infokey_SOURCES, nodist_infokey_SOURCES): Removed.
	(check_DATA): Removed.
	(ginfo_SOURCES): infokey.c, infokey.h, key.c, key.h added.

	* info/infokey.c (program_name): Declared static to stop name conflict.
	(main): Disabled.
	(compile, error_message): No longer declared static.
	* info/infokey.c, info/infokey.h (struct sect): Definition moved.
	* info/infokey.h (INFOKEY_FILE): Change to .infokey (_infokey for